# easy-schedule

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml  ruff.toml
alembic/versions/: af882662777c_initial_migration.py  cb9fed7f6c2d_initial_migration.py  cd82546f18ce_initial_migration.py  e5c4e155f0ec_create_users_table.py
app/: __init__.py
app/configs/: __init__.py  base.py  base_crud.py  settings.py
app/controllers/appointments/: appointments_controller.py
app/controllers/auth/: auth_controller.py
app/controllers/clients/: clients_controller.py
app/controllers/professionals/: professionals_controller.py
app/controllers/schedules/: schedules_controller.py
app/controllers/sessions/: sessions_controller.py
app/exceptions/: internal_server_error_exception.py
app/helpers/: get_current_user.py
app/models/: __init__.py  appointments.py  clients.py  messages.py  professionals.py  schedules.py  services.py  users.py
app/routes/: __init__.py  appointment_routes.py  auth_routes.py  client_routes.py  health.py  professional_routes.py  schedule_routes.py  session_routes.py  user_routes.py  webhook_routes.py
app/schemas/: appointment_schemas.py  auth_schemas.py  client_schemas.py  input_schemas.py  professional_schemas.py  responses_schemas.py  schedule_schemas.py  service_schemas.py  session_schemas.py  user_schemas.py
app/services/: auth_services.py  base_wpp_services.py  messages_wpp_services.py  sessions_wpp_services.py
wppconnect-server/: Dockerfile  config.ts
(+2 files in other folders)
